Fix navbar issues on mobile

--- a/dev/client/src/style.css
+++ b/dev/client/src/style.css
@@ -807,7 +807,7 @@ main {
 #signup-main {
   height: 80vh;
   min-height: 600px;
-  margin-top: 12rem;
+  margin-top: 10rem;
 }
 #signup-main .container {
   display: flex;
@@ -2008,9 +2008,85 @@ main {
   text-align: left;
 }
 
+
+
 @media (max-width: 3840px) {
   .navbar .container {
     max-width: 1920px;
     margin: auto;
+  }
+}
+
+@media (max-width: 980px) {
+  .navbar .nav-text {
+    font-size: 1.6rem;
+    width: 10rem;
+  }
+  .navbar .nav-text-spacer {
+    display: none;
+  }
+  .navbar button {
+    position: relative;
+    top: 0.5rem;
+    display: block;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  }
+  .navbar .nav-menu-btn {
+    transition: 0.15s ease-out;
+  }
+  .navbar .nav-menu {
+    display: none;
+    position: absolute;
+    top: 7rem;
+    right: 1.95rem;
+    padding: 1rem;
+    background-color: white;
+    border-radius: 0.5rem;
+    transition: opacity, top 0.15s ease-out
+  }
+  .navbar .nav-list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1rem;
+    top: 0rem;
+    padding: 0rem;
+  }
+  .navbar .nav-list .nav-item {
+    margin: 0rem;
+    align-items: center;
+    height: 3.8rem;
+    width: 60vw;
+    border-radius: 0.5rem;
+    transition: background-color 0.3s ease;
+  }
+  .navbar .nav-item:hover  {
+    background-color: #fef1ed;
+    font-size: 1.1rem;
+  }
+  .navbar .nav-item:hover > * {
+    color: black;
+    font-size: 1.1rem;
+  }
+}
+
+@media (max-width: 630px) {
+  .navbar .nav-menu {
+    right: 7.5vw;
+    left: 7.5vw;
+  }
+  .navbar .nav-list .nav-item {
+    width: 100%;
+  }
+}
+
+@media (max-width: 530px) {
+  .navbar .nav-text {
+    font-size: 1.6rem;
+    width: 10rem;
+  }
+  .navbar .nav-text-spacer {
+    display: none;
   }
 }
